syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.nucleus;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.nucleus.input";

import "google/type/date.proto";
import "google/protobuf/any.proto";

enum PlannerInput {
    DATA_MANAGER = 0;
    ACTOR = 1;
    REPORT = 2;
}

message SimulationStateInput {
    double startTime = 1;
    optional google.type.Date baseDate = 2;
}

message ExperimentParameterDataInput {
    int32 threadCount = 1;
    bool startRecordingIsScheduled = 2;
    optional double simulationHaltTime = 3;
    bool haltOnException = 4;
    optional string experimentProgressLogPath = 5;
    bool continueFromProgressLog = 6;
    repeated int32 explictScenarioIds = 7;
}

message DimensionInput {
    google.protobuf.Any dimension = 1;
}